# jatayu

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  test_agent_call.py  test_db_lock.py  test_feedback.py  test_fetch.py  test_full_pipeline.py  test_kg.py  test_kg_agent.py  test_logfire.py  test_real_agent.py  test_regex.py  test_research.py  test_research2.py  test_research3.py  test_research4.py  test_struct.py
agent/: __init__.py  audio_agent.py  base_agent.py  chat_agent.py  compressor.py  continuous_research.py  continuous_state.py  deep_research_agent.py  gemini_model.py  image_agent.py  knowledge_graph.py  long_term_memory.py  message_queue.py  model.py  model_selector.py  research_steps.py  runner.py  tool_manager.py  web_search.py
comms/: base_runner.py
config/: __init__.py  env_config.py
constants/: __init__.py  event_constants.py
docs/: advanced_voice_feature.md  deep_research_feature.md  desktop_automation_feature.md  digital_proxy_feature.md  empathetic_companion_feature.md  home_automation_feature.md  interactive_research_feature.md  live_watchtower_feature.md  personal_knowledge_graph_feature.md  proactive_scheduling_feature.md
jatayu.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lab/: telegram.ipynb
models/: __init__.py
storage/: __init__.py  audio_artifact_store.py  db.py  models.py  service.py
tests/: test_agent_e2e.py  test_agent_runner.py  test_audio_agent.py  test_audio_artifact_store.py  test_chat_agent.py  test_continuous_research.py  test_continuous_research_evals.py  test_gemini_model.py  (+10 more)
(+61 files in other folders)
